<resources>
    <string name="about_msg">Renebeats was made by Peter Raozen (iBlueDust) under the company name Year Zero.  The project is under no official license and was intended for a limited audience and for private use only. The creator has full rights to the modification, extermination, and publishing of this application.  Development started in 20 September 2018 and is still under alpha or initial development. Only one developer is continuing this project in his spare time.</string>
    <string name="adapter_download_autolog_failed">Failed to autolog download error</string>
    <string name="adapter_download_converting">%s converted</string>
    <string name="adapter_download_downloaded">Download Completed, waiting for conversion</string>
    <string name="adapter_download_downloading">%s of %s downloaded</string>
    <string name="adapter_download_elapsed">Took </string>
    <string name="adapter_download_invalid">Invalid download parameters. Please try again.</string>
    <string name="adapter_download_metadata">Applying metadata</string>
    <string name="adapter_download_network">Waiting for download</string>
    <string name="adapter_download_waiting">Waiting for network</string>
    <string name="adapter_history_autolog_failed">Failed to autolog download error</string>
    <string name="album">Album</string>
    <string name="app_icon">App Icon</string>
    <string name="app_name">Renebeats</string>
    <string name="append_suffix">Append Suffix</string>
    <string name="artist">Artist</string>
    <string name="assigned_at">Assigned at</string>
    <string name="available_format">Available Format</string>
    <string name="back">Back</string>
    <string name="bitrate">Bitrate</string>
    <string-array name="bitrates">
        <item>64</item>
        <item>96</item>
        <item>128</item>
        <item>192</item>
        <item>256</item>
        <item>320</item>
    </string-array>
    <string name="cancel">Cancel</string>
    <string name="cancelled">Cancelled</string>
    <string name="clear_all">Clear All</string>
    <string name="clipboard_copy">Copied to clipboard</string>
    <string name="close">Close</string>
    <string name="completed">Completed</string>
    <string name="completed_at">Completed at</string>
    <string name="conversion">Conversion</string>
    <string name="copy">Copy</string>
    <string-array name="data">
        <item>Wifi Only</item>
        <item>Wifi and Mobile Data</item>
    </string-array>
    <string name="delete">Delete</string>
    <string-array name="dependencies">
        <item>AndroidAudioConverter 0.0.8 by Adriel "adrielcafe" Café on GitHub (was modified to add normalize and preset functionality)</item>
        
        <item>AndroidPreferenceActivity 7.0.3 by Michael "michael-rapp" Rapp on GitHub</item>
        <item>Android Sliding Up Panel 3.4.0 by Umano on GitHub</item>
        /<item>CircleImageView 3.0.1 by Henning "hdodenhof" Dodenhof on GitHub</item>
        <item>Commons Text 1.6 by Apache Software Foundation</item>
        <item>Commons IO 1.3.2 by Apache Software Foundation</item>
        /<item>EasyPermissions 0.3.0 by Google Samples on GitHub</item>
        <item>Fetch2 3.1.1 by Tonyo Francis on GitHub</item>
        <item>Gson 2.8.6 by Google</item>
        

        
        <item>MyID3 for Android</item>
        
        <item>PanView 0.1.0 by Tyler Filla on GitHub</item>
        /<item>Picasso 2.71828 by Square on GitHub</item>
        /<item>picasso-transformations 2.2.1 by Daichi "wasabeef" Furiya on GitHub</item>
        <item>Shimmer 0.5.0 by Facebook on GitHub</item>
        <item>Storage Chooser 2.0.4.4 by Ashish "codekidX" Shekar on GitHub</item>
        <item>youtubedl-android 0.7.0 by yausername on GitHub</item>
        
    </string-array>
    <string name="dependencies_title">Libraries Used</string>
    <string name="dialog_download_url">Tap to Reveal</string>
    <string name="dialog_duration">Pick a Time</string>
    <string name="dialog_errorlog_exception_unknown">Unknown exception</string>
    <string name="dialog_errorlog_save">Successfully logged error</string>
    <string name="dialog_errorlog_save_failed">Failed to save log</string>
    <string name="dialog_retrieving_msg">Please wait, video parameters are being retrieved.</string>
    <string name="download">Download</string>
    <string name="download_already">Already Running</string>
    <string name="download_already_msg">Another instance of this download is already running</string>
    <string name="download_already_positive">Cancel and Run This One</string>
    <string name="download_conflict">Conflicting File Names</string>
    <string name="download_conflict_msg">There is already a file called %s in the Music folder. A suffix such as \'(1)\' can be appended to the file name to avoid conflicts.</string>
    <string name="download_id">Download ID</string>
    <string name="download_invalid">Invalid Download Arguments</string>
    <string name="download_invalid_title">There must be a title</string>
    <string name="download_invalid_track">Invalid Track Number</string>
    <string name="download_invalid_year">Invalid Year Number</string>
    <string name="download_invalid_youtube_id">Invalid video ID</string>
    <string name="download_normalize_msg">Some audio/videos may have a quieter audio than other audios. This is because sometimes an audio/video file does not use the full volume range available and thus resulting in its audio being very quiet. Normalization will increase the audio\'s volume in such that it will utilize the whole available volume range though it may take more time.</string>
    <string name="download_retrieve">Retrieving…</string>
    <string name="download_start">Download started</string>
    <string name="download_time_end">Set an end time</string>
    <string name="download_time_end_length">End time cannot exceed the video\'s size</string>
    <string name="download_time_end_start">End time cannot be equal or be less than the start time</string>
    <string name="download_time_start">Set a start time</string>
    <string name="download_time_start_end">Start time cannot be equal or exceed the end time</string>
    <string name="end">End</string>
    <string name="error_icon">Error icon</string>
    <string name="error_logs">Error Logs</string>
    <string name="error_wifi">No Wifi</string>
    <string name="error_wifi_action">Resume Anyway</string>
    <string name="error_wifi_msg">Connect to a wifi network to resume downloads.</string>
    <string name="errorlog_empty">There are no logs! I feel accomplished :P</string>
    <string name="exception">Exception</string>
    <string name="failed">Failed</string>
    <string name="fals">False</string>
    <string-array name="file_name">
        <item>[Artist] - [Title]</item>
        <item>[Title] - [Artist]</item>
    </string-array>
    <string-array name="file_name_entries">
        <item>artist first</item>
        <item>title first</item>
    </string-array>
    <string name="final_metadata">Final (MTDT)</string>
    <string name="format">Format</string>
    <string-array name="formats">
        <item>aac</item>
        <item>flac</item>
        <item>m4a</item>
        <item>mp3</item>
        <item>wav</item>
        <item>wma</item>
    </string-array>
    <string name="genres">Genres</string>
    <string name="go">Go</string>
    <string-array name="guesser">
        <item>Off</item>
        <item>Use video title as song title</item>
        <item>Just use video title and uploader</item>
        <item>Guess the title and artist from the video title</item>
        
        
    </string-array>
    <string-array name="guesser_entries">
        <item>off</item>
        <item>simple</item>
        <item>predict</item>
        
        
    </string-array>
    <string name="history">History</string>
    <string name="history_delete">Delete History Log</string>
    <string name="history_delete_msg">History log will be permanently gone once deleted</string>
    <string name="history_delete_positive">Delete</string>
    <string name="history_deleted">Deleted \'%s\'</string>
    <string name="history_empty">Uhh… you haven\'t downloaded anything. Do try :)</string>
    <string name="history_fetch_timeout">Data Fetch Timeout</string>
    <string name="history_hid">Deleted %s</string>
    <string name="history_segment_timeout">Data Segmentation Parsing Timeout</string>
    <string name="history_unhid">Restored %s</string>
    <string name="illegal_argument_exception">IllegalArgumentException</string>
    <string name="kbps">kbps</string>
    <string name="last_month">Last Month</string>
    <string name="last_year">Last Year</string>
    <string name="main_empty">No downloads are currently running</string>
    <string name="main_error_connection_msg">It seems that we can\'t connect to YouTube. Please check your connection and try again later.</string>
    <string name="main_error_empty">Your search didn\'t come out with any results</string>
    <string name="main_error_quota">Uh oh! Sorry but it seems like we\'re having problems searching Youtube for you. Please try sharing Youtube videos from the Youtube app to Renebeats for the time being.</string>
    <string name="main_error_quota_action">Open Youtube</string>
    <string name="main_error_timeout">Request timed out</string>
    <string name="main_header_are">s are</string>
    <string name="main_header_completed">%d download%s completed</string>
    <string name="main_header_empty">No downloads are currently running</string>
    <string name="main_header_has"> </string>
    <string name="main_header_have">s have</string>
    <string name="main_header_is"> is</string>
    <string name="main_search">Search or Paste a URL</string>
    <string name="pref_data_cat_delete">Delete</string>
    <string name="pref_data_clear_history_summary">Download history will be cleared permanently</string>
    <string name="pref_data_clearcache">ClearCache</string>
    <string name="pref_data_clearcache_summary">No downloads must be performing to clear cache</string>
    <string name="pref_data_clearcache_title">Clear Cache</string>
    <string name="pref_data_clearhistory">DeleteHistory</string>
    <string name="pref_data_clearhistory_title">Delete History</string>
    <string name="pref_data_clearlogs">ClearLogs</string>
    <string name="pref_data_clearlogs_summary">Clear all error logs</string>
    <string name="pref_data_clearlogs_title">Clear Logs</string>
    <string name="pref_data_output">OutputDirectory</string>
    <string name="pref_data_output_title">Output Location</string>
    <string name="pref_data_restore">RestoreSettings</string>
    <string name="pref_data_restore_summary">All preferences will be reverted to their initial state</string>
    <string name="pref_data_restore_title">Restore All Preferences</string>
    <string name="pref_notification_completed">NotificationCompleted</string>
    <string name="pref_notification_completed_summary">Show notifications of completed downloads</string>
    <string name="pref_notification_completed_title">Completed</string>
    <string name="pref_notification_master">NotificationMaster</string>
    <string name="pref_notification_master_title">Notifications</string>
    <string name="pref_notification_queue">NotificationQueue</string>
    <string name="pref_notification_queue_summary">Show notifications of queued downloads</string>
    <string name="pref_notification_queue_title">Queue</string>
    <string name="pref_notification_running">NotificationRunning</string>
    <string name="pref_notification_running_summary">Show notifications of running downloads</string>
    <string name="pref_notification_running_title">Running</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="sym_down_arrow">&#129139;</string>
    <string name="sym_empty">-</string>
    <string name="sym_x">x</string>
</resources>