<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.preference.Preference
        android:key="@string/pref_data_output"
        android:title="@string/pref_data_output_title" />

    <androidx.preference.PreferenceCategory
        android:title="@string/pref_data_cat_delete" >

        <androidx.preference.Preference
            android:key="@string/pref_data_clearcache"
            android:title="@string/pref_data_clearcache_title"
            android:summary="@string/pref_data_clearcache_summary" />

<!--        <androidx.preference.Preference-->
<!--            android:key="@string/pref_data_clearpaused"-->
<!--            android:title="Clear Paused"-->
<!--            android:summary="All paused downloads will be cancelled" />-->

        <androidx.preference.Preference
            android:key="@string/pref_data_clearlogs"
            android:title="@string/pref_data_clearlogs_title"
            android:summary="@string/pref_data_clearlogs_summary" />

        <androidx.preference.Preference
            android:key="@string/pref_data_clearhistory"
            android:title="@string/pref_data_clearhistory_title"
            android:summary="@string/pref_data_clear_history_summary" />

        <androidx.preference.Preference
            android:key="@string/pref_data_restore"
            android:title="@string/pref_data_restore_title"
            android:summary="@string/pref_data_restore_summary" />

    </androidx.preference.PreferenceCategory>
</androidx.preference.PreferenceScreen>