<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.preference.SwitchPreference
        android:key="@string/pref_notification_master"
        android:title="@string/pref_notification_master_title" />

    <androidx.preference.CheckBoxPreference
        android:key="@string/pref_notification_queue"
        android:title="@string/pref_notification_queue_title"
        android:summary="@string/pref_notification_queue_summary" />

    <androidx.preference.CheckBoxPreference
        android:key="@string/pref_notification_running"
        android:title="@string/pref_notification_running_title"
        android:summary="@string/pref_notification_running_summary" />

    <androidx.preference.CheckBoxPreference
        android:key="@string/pref_notification_completed"
        android:title="@string/pref_notification_completed_title"
        android:summary="@string/pref_notification_completed_summary" />

</androidx.preference.PreferenceScreen>