<?xml version="1.0" encoding="utf-8"?><com.sothree.slidinguppanel.SlidingUpPanelLayout xmlns:android="http://schemas.android.com/apk/res/android"	xmlns:app="http://schemas.android.com/apk/res-auto"	xmlns:tools="http://schemas.android.com/tools"	android:id="@+id/slide_up"	android:layout_width="match_parent"	android:layout_height="match_parent"	android:gravity="bottom"	tools:context=".download.MainActivity"	app:umanoPanelHeight="96dp"	app:umanoAnchorPoint="0.75"	app:umanoScrollableView="@id/query_list"	app:umanoInitialState="hidden"	app:umanoShadowHeight="0dp" >	<RelativeLayout		android:layout_width="match_parent"		android:layout_height="match_parent">		<androidx.core.widget.NestedScrollView			android:id="@+id/main"			android:layout_width="match_parent"			android:layout_height="match_parent">			<androidx.constraintlayout.widget.ConstraintLayout				android:layout_width="match_parent"				android:layout_height="wrap_content">				<ImageView					android:id="@+id/imageView"					android:layout_width="0dp"					android:layout_height="wrap_content"					android:adjustViewBounds="true"					android:maxHeight="232dp"					app:layout_constraintEnd_toEndOf="parent"					app:layout_constraintStart_toStartOf="parent"					app:layout_constraintTop_toTopOf="parent"					app:srcCompat="@drawable/background_vinyl"					android:contentDescription="@string/sym_empty" />				<com.google.android.material.textfield.TextInputLayout					android:id="@+id/textInputLayout"					style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"					android:layout_width="0dp"					android:layout_height="wrap_content"					android:layout_marginStart="32dp"					android:layout_marginLeft="32dp"					android:layout_marginTop="240dp"					android:layout_marginEnd="32dp"					android:layout_marginRight="32dp"					android:hint="@string/main_search"					app:hintAnimationEnabled="true"					app:hintEnabled="true"					app:layout_constraintEnd_toEndOf="parent"					app:layout_constraintStart_toStartOf="parent"					app:layout_constraintTop_toTopOf="parent">					<com.google.android.material.textfield.TextInputEditText						android:id="@+id/search"						android:layout_width="match_parent"						android:layout_height="wrap_content"						android:singleLine="true" />				</com.google.android.material.textfield.TextInputLayout>				<ImageButton					android:id="@+id/settings"					android:layout_width="wrap_content"					android:layout_height="wrap_content"					android:background="@android:color/transparent"					app:layout_constraintStart_toStartOf="@+id/textInputLayout"					app:layout_constraintTop_toBottomOf="@+id/textInputLayout"					app:srcCompat="@drawable/ic_settings_gray_24dp"					tools:ignore="VectorDrawableCompat"					android:contentDescription="@string/settings" />				<ImageButton					android:id="@+id/history"					android:layout_width="wrap_content"					android:layout_height="wrap_content"					android:layout_marginStart="8dp"					android:layout_marginLeft="8dp"					android:background="@android:color/transparent"					app:layout_constraintStart_toEndOf="@+id/settings"					app:layout_constraintTop_toBottomOf="@+id/textInputLayout"					app:srcCompat="@drawable/ic_history_gray_24dp"					tools:ignore="VectorDrawableCompat"					android:contentDescription="@string/history" />				<ImageButton					android:id="@+id/query"					android:layout_width="80dp"					android:layout_height="40dp"					android:layout_marginStart="16dp"					android:layout_marginLeft="16dp"					android:background="@drawable/rounded_accent"					android:contentDescription="@string/search"					android:src="@drawable/ic_search_light_24dp"					app:layout_constraintEnd_toEndOf="@+id/textInputLayout"					app:layout_constraintHorizontal_bias="1.0"					app:layout_constraintStart_toEndOf="@+id/history"					app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />				<com.google.android.material.card.MaterialCardView					android:id="@+id/error_card"					android:layout_width="0dp"					android:layout_height="wrap_content"					android:layout_marginStart="16dp"					android:layout_marginLeft="16dp"					android:layout_marginTop="16dp"					android:layout_marginEnd="16dp"					android:layout_marginRight="16dp"					android:layout_marginBottom="8dp"					android:visibility="gone"					app:layout_constraintBottom_toTopOf="@+id/scroll_img"					app:layout_constraintEnd_toEndOf="parent"					app:layout_constraintStart_toStartOf="parent"					app:layout_constraintTop_toBottomOf="@+id/query"					app:layout_constraintVertical_bias="1.0">					<androidx.constraintlayout.widget.ConstraintLayout						android:layout_width="match_parent"						android:layout_height="match_parent">						<ImageView							android:id="@+id/error_img"							android:layout_width="wrap_content"							android:layout_height="wrap_content"							android:layout_marginStart="16dp"							android:layout_marginLeft="16dp"							android:layout_marginTop="8dp"							android:layout_marginBottom="8dp"							android:contentDescription="@string/error_icon"							app:layout_constraintBottom_toBottomOf="@+id/error_action"							app:layout_constraintStart_toStartOf="parent"							app:layout_constraintTop_toTopOf="@+id/error_title"							app:srcCompat="@drawable/ic_no_wifi_black_96dp"							tools:ignore="VectorDrawableCompat" />						<TextView							android:id="@+id/error_msg"							android:layout_width="0dp"							android:layout_height="wrap_content"							android:layout_marginTop="8dp"							android:layout_marginBottom="16dp"							android:textColor="@color/textGray"							app:layout_constraintBottom_toTopOf="@+id/error_action"							app:layout_constraintEnd_toEndOf="@+id/error_title"							app:layout_constraintStart_toStartOf="@+id/error_title"							app:layout_constraintTop_toBottomOf="@+id/error_title" />						<TextView							android:id="@+id/error_title"							android:layout_width="0dp"							android:layout_height="wrap_content"							android:layout_marginStart="16dp"							android:layout_marginLeft="16dp"							android:layout_marginTop="16dp"							android:layout_marginEnd="8dp"							android:layout_marginRight="8dp"							android:textColor="@color/textDark"							app:layout_constraintEnd_toEndOf="parent"							app:layout_constraintStart_toEndOf="@+id/error_img"							app:layout_constraintTop_toTopOf="parent" />						<com.google.android.material.button.MaterialButton							android:id="@+id/error_action"							style="@style/Widget.MaterialComponents.Button.TextButton"							android:layout_width="wrap_content"							android:layout_height="wrap_content"							android:layout_marginEnd="8dp"							android:layout_marginRight="8dp"							android:layout_marginBottom="8dp"							android:background="@android:color/transparent"							android:textColor="@color/Accent"							app:layout_constraintBottom_toBottomOf="parent"							app:layout_constraintEnd_toEndOf="parent" />					</androidx.constraintlayout.widget.ConstraintLayout>				</com.google.android.material.card.MaterialCardView>				<ImageView					android:id="@+id/scroll_img"					android:layout_width="wrap_content"					android:layout_height="wrap_content"					android:layout_marginBottom="8dp"					android:src="@drawable/ic_scroll_down_mixed_24dp"					android:visibility="invisible"					app:layout_constraintBottom_toTopOf="@+id/negative"					app:layout_constraintEnd_toEndOf="parent"					app:layout_constraintStart_toStartOf="parent"					android:contentDescription="@string/sym_down_arrow" />				<com.google.android.material.card.MaterialCardView					android:id="@+id/negative"					android:layout_width="0dp"					android:layout_height="wrap_content"					android:layout_marginStart="16dp"					android:layout_marginLeft="16dp"					android:layout_marginTop="256dp"					android:layout_marginEnd="16dp"					android:layout_marginRight="16dp"					app:cardElevation="0dp"					app:layout_constraintEnd_toEndOf="parent"					app:layout_constraintStart_toStartOf="parent"					app:layout_constraintTop_toBottomOf="@+id/textInputLayout"					app:strokeColor="@color/lightgray"					app:strokeWidth="1dp">					<LinearLayout						android:layout_width="match_parent"						android:layout_height="wrap_content"						android:gravity="center_vertical"						android:orientation="horizontal">						<TextView							android:id="@+id/info_title"							android:layout_width="0dp"							android:layout_height="wrap_content"							android:layout_margin="16dp"							android:layout_weight="1"							android:text="@string/main_empty"							android:textColor="@color/textDark" />						<com.google.android.material.button.MaterialButton							android:id="@+id/info_action"							style="@style/Widget.MaterialComponents.Button.TextButton"							android:layout_width="wrap_content"							android:layout_height="wrap_content"							android:textColor="@color/Accent" />					</LinearLayout>				</com.google.android.material.card.MaterialCardView>				<androidx.recyclerview.widget.RecyclerView					android:id="@+id/list"					android:layout_width="match_parent"					android:layout_height="wrap_content"					android:layout_marginStart="16dp"					android:layout_marginLeft="16dp"					android:layout_marginTop="16dp"					android:layout_marginEnd="16dp"					android:layout_marginRight="16dp"					app:layout_constraintEnd_toEndOf="parent"					app:layout_constraintStart_toStartOf="parent"					app:layout_constraintTop_toBottomOf="@+id/negative" />			</androidx.constraintlayout.widget.ConstraintLayout>		</androidx.core.widget.NestedScrollView>	</RelativeLayout>	<RelativeLayout		android:layout_width="match_parent"		android:layout_height="match_parent"		android:background="@drawable/queryslide_back">		<include layout="@layout/activity_query" />	</RelativeLayout></com.sothree.slidinguppanel.SlidingUpPanelLayout>