<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/swipe"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:fillViewport="true"
	tools:context=".download.HistoryActivity">

	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<TextView
			android:id="@+id/empty"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:layout_centerInParent="true"
			android:text="@string/history_empty" />

		<androidx.core.widget.NestedScrollView
			android:layout_width="match_parent"
			android:layout_height="match_parent">

			<androidx.constraintlayout.widget.ConstraintLayout
				android:layout_width="match_parent"
				android:layout_height="match_parent">

				<ImageButton
					android:id="@+id/home"
					android:layout_width="?attr/actionBarSize"
					android:layout_height="?attr/actionBarSize"
					android:background="@android:color/transparent"
					android:contentDescription="@string/sym_x"
					app:layout_constraintDimensionRatio="H,"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintTop_toTopOf="parent"
					app:srcCompat="@drawable/ic_arrow_left_gray_24dp"
					tools:ignore="VectorDrawableCompat" />

				<TextView
					android:id="@+id/title"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_margin="32dp"
					android:text="@string/history"
					android:textAppearance="@style/Text.Header.Big"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintTop_toTopOf="parent" />

				<!--                <androidx.appcompat.widget.SearchView-->
				<!--                    android:id="@+id/search"-->
				<!--                    android:layout_width="0dp"-->
				<!--                    android:layout_height="wrap_content"-->
				<!--                    android:layout_margin="16dp"-->
				<!--                    app:layout_constraintEnd_toEndOf="parent"-->
				<!--                    app:layout_constraintStart_toStartOf="parent"-->
				<!--                    app:layout_constraintTop_toBottomOf="@id/title" />-->

				<androidx.recyclerview.widget.RecyclerView
					android:id="@+id/list"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_marginStart="16dp"
					android:layout_marginLeft="16dp"
					android:layout_marginTop="16dp"
					android:layout_marginEnd="16dp"
					android:layout_marginRight="16dp"
					app:layout_constraintBottom_toBottomOf="parent"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintTop_toBottomOf="@id/title" />

			</androidx.constraintlayout.widget.ConstraintLayout>
		</androidx.core.widget.NestedScrollView>
	</RelativeLayout>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>